--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,5 +2,6 @@ spring:
   data:
     mongodb:
       uri: mongodb+srv://${DB_USER:admin}:${DB_PASSWORD}@webfluxcoursecluster.iapl3pd.mongodb.net/${DB_NAME:webflux-course}?retryWrites=true&w=majority&appName=WebFluxCourseCluster
+      auto-index-creation: true
   application:
     name: webflux_course
